# resume

./: app.py  pyproject.toml
.devcontainer/: devcontainer.json
backend/backend/: settings.py
backend/resume/: models.py
frontend/static/: output.css
frontend/templates/: index.html
